--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -10,5 +10,6 @@ jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Run script to print foo
         run: ./scripts/test.sh
