--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -8,8 +8,10 @@ on: push
 
 jobs:
   run-script:
+    name: Run script
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - name: Run script to print foo
+        shell: bash
         run: ./scripts/test.sh
