--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run script to print foo
         shell: bash
-        run: ls
+        run: ls -la
