--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -11,6 +11,7 @@ jobs:
     name: Run script
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Run script to print foo
         shell: bash
-        run: ls -la
+        run: ./.github/workflows/scripts/test.sh
