--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -14,4 +14,6 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run script to print foo
         shell: bash
-        run: ./.github/workflows/scripts/test.sh
+        run: |
+          chmod +x ./.github/workflows/scripts/test.sh
+          ./.github/workflows/scripts/test.sh
