Add files changed script

--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -16,3 +16,4 @@ jobs:
         shell: bash
         run: |
           sh ./.github/workflows/scripts/test.sh
+          sh ./.github/workflows/scripts/files_changed.sh
