--- a/.github/workflows/run-script-pr.yml
+++ b/.github/workflows/run-script-pr.yml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Run script
+name: Run script on pull request
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on: push
 
 jobs:
-  run-script:
-    name: Run script
+  run-script-pr:
+    name: Run script on pull request
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
