--- a/.github/workflows/run-script-pr.yml
+++ b/.github/workflows/run-script-pr.yml
@@ -21,3 +21,9 @@ jobs:
       - name: Get files changed using git diff to compare pr branch to master for dbt test
         id: changed_files_testing
         run: sh ./.github/workflows/scripts/changed_files_testing.sh
+      - name: Verify output
+        id: verify_output
+        run: echo ${{ steps.changed_files.FILES_CHANGED }}
+      - name: Verify output testing
+        id: verify_output_testing
+        run: echo ${{ steps.changed_files_testing.FILES_CHANGED }}
