--- a/.github/workflows/run-script-pr.yml
+++ b/.github/workflows/run-script-pr.yml
@@ -21,9 +21,18 @@ jobs:
       - name: Get files changed using git diff to compare pr branch to master for dbt test
         id: changed_files_testing
         run: sh ./.github/workflows/scripts/changed_files_testing.sh
+      - name: Get files changed using git diff to compare pr branch to master for dbt run new
+        id: changed_files_new
+        run: echo "::set-output name=FILES_CHANGED::$(sh ./.github/workflows/scripts/changed_files_new.sh)"
+        env:
+          GITHUB_BASE_REF: ${{ github.base_ref }}
+          GITHUB_HEAD_REF: ${{ github.head_ref }}
       - name: Verify output
         id: verify_output
         run: echo ${{ steps.changed_files.FILES_CHANGED }}
       - name: Verify output testing
         id: verify_output_testing
         run: echo ${{ steps.changed_files_testing.FILES_CHANGED }}
+      - name: Verify output new
+        id: verify_output_new
+        run: echo ${{ steps.changed_files_new.FILES_CHANGED }}
