--- a/.github/workflows/run-script-pr.yml
+++ b/.github/workflows/run-script-pr.yml
@@ -29,7 +29,9 @@ jobs:
           GITHUB_HEAD_REF: ${{ github.head_ref }}
       - name: Get files changed using git diff to compare pr branch to master for dbt run foo
         id: changed_files_foo
-        run: echo "::set-output name=FILES_CHANGED::$(sh ./.github/workflows/scripts/changed_files_foo.sh)"
+        run: |
+          sh ./.github/workflows/scripts/changed_files_foo.sh
+          echo "::set-output name=FILES_CHANGED::$(sh ./.github/workflows/scripts/changed_files_foo.sh)"
         env:
           GITHUB_BASE_REF: ${{ github.base_ref }}
           GITHUB_HEAD_REF: ${{ github.head_ref }}
