--- a/.github/workflows/run-script-pr.yml
+++ b/.github/workflows/run-script-pr.yml
@@ -31,6 +31,8 @@ jobs:
         id: changed_files_foo
         run: |
           sh ./.github/workflows/scripts/changed_files_foo.sh
+          echo $(sh ./.github/workflows/scripts/changed_files_foo.sh)
+          echo "$(sh ./.github/workflows/scripts/changed_files_foo.sh)"
           echo "::set-output name=FILES_CHANGED::$(sh ./.github/workflows/scripts/changed_files_foo.sh)"
         env:
           GITHUB_BASE_REF: ${{ github.base_ref }}
