--- a/.github/workflows/run-script-pr.yml
+++ b/.github/workflows/run-script-pr.yml
@@ -21,34 +21,15 @@ jobs:
       - name: Get files changed using git diff to compare pr branch to master for dbt test
         id: changed_files_testing
         run: sh ./.github/workflows/scripts/changed_files_testing.sh
-      - name: Get files changed using git diff to compare pr branch to master for dbt run new
-        id: changed_files_new
-        run: echo "::set-output name=FILES_CHANGED::$(sh ./.github/workflows/scripts/changed_files_new.sh)"
-        env:
-          GITHUB_BASE_REF: ${{ github.base_ref }}
-          GITHUB_HEAD_REF: ${{ github.head_ref }}
       - name: Get files changed using git diff to compare pr branch to master for dbt run foo
         id: changed_files_foo
-        run: |
-          sh ./.github/workflows/scripts/changed_files_foo.sh
-      - name: Get files changed using git diff to compare pr branch to master for dbt run foo 2
-        id: changed_files_foo_2
-        run: |
-          echo "::set-output name=FILES_CHANGED::$(sh ./.github/workflows/scripts/changed_files_foo_2.sh)"
+        run: sh ./.github/workflows/scripts/changed_files_foo.sh
       - name: Verify output
         id: verify_output
         run: echo ${{ steps.changed_files.outputs.FILES_CHANGED }}
       - name: Verify output testing
         id: verify_output_testing
         run: echo ${{ steps.changed_files_testing.outputs.FILES_CHANGED }}
-      - name: Verify output new
-        id: verify_output_new
-        run: echo ${{ steps.changed_files_new.outputs.FILES_CHANGED }}
       - name: Verify output foo
         id: verify_output_foo
         run: echo ${{ steps.changed_files_foo.outputs.FILES_CHANGED }}
-      - name: Verify output foo 2
-        id: verify_output_foo_2
-        run: |
-          echo steps.changed_files_foo_2.FILES_CHANGED
-          echo ${{steps.changed_files_foo_2.outputs.FILES_CHANGED}}
